--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
-
-/* *{
+/* 
+*{
     outline: 1px solid black;
 } */
 
@@ -26,49 +26,69 @@ body{
     height: fit-content;
 }
 
-    .buttons{
-        /* transform: scale(1.1, 1.1); */
-        margin: 10px;
-        transition: transform 0.5s;
-        transition-timing-function: ease-out;
-        background-color: #ddd;
-        color: #3d2820;
-        width: 140px;
-        height: 140px;
-        border: none;
-        border-radius: 15px;
-        cursor: pointer;
-        font-family: Arial, Helvetica, sans-serif;
+    #row1{
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
-    }
-
-    .buttons:hover{
-        transform: scale(0.9, 0.9);
-    }
-      .titleHead{
         width: 100%;
-        text-align: center;
-        margin: 20px 0px 0px 0px;
-        /* background-color: aqua; */
-      }
-            h1{
-                font-size: 60px;
-                margin: 0px;
-            }
-
-      .para{
+        justify-content: space-evenly;
+    }
+    
+    #row2{
+        display: flex;
+        flex-wrap: wrap;
         width: 100%;
-        text-align: center;
-        margin: -30px;
-        /* background-color: green; */
-      }
+        justify-content: space-evenly;
+    }
+    
+    #row3{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+    }
+        .buttons{
+            /* transform: scale(1.1, 1.1); */
+            margin: 10px;
+            transition: transform 0.5s;
+            transition-timing-function: ease-out;
+            background-color: #ddd;
+            color: #3d2820;
+            width: 140px;
+            height: 140px;
+            border: none;
+            border-radius: 15px;
+            cursor: pointer;
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
 
-            p{
-                font-size: 18px;
-                margin: 0px;
-                text-transform: uppercase;
-            }
-           
+        .buttons:hover{
+            transform: scale(0.9, 0.9);
+        }
+        .titleHead{
+            width: 100%;
+            text-align: center;
+            margin: 20px 0px 0px 0px;
+            /* background-color: aqua; */
+        }
+                h1{
+                    font-size: 60px;
+                    margin: 0px;
+                }
+
+        .para{
+            width: 100%;
+            text-align: center;
+            margin: -30px;
+            /* background-color: green; */
+        }
+
+                p{
+                    font-size: 18px;
+                    margin: 0px;
+                    text-transform: uppercase;
+                }
+            
           
